--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -9668,7 +9668,7 @@ a:focus {
 
 .bg-gradient-primary {
   background-color: #929ec1;
-  background-image: linear-gradient(180deg, #4e73df 10%, #06112f 100%);
+  background-image: linear-gradient(180deg, #36df9b 10%, #06112f 100%);
   background-size: cover;
 }
 
