--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -66,7 +66,7 @@ body {
   line-height: 1.5;
   color: #858796;
   text-align: left;
-  background-color: #fff;
+  background-color: #14ff2c;
 }
 
 [tabindex="-1"]:focus {
@@ -9667,8 +9667,8 @@ a:focus {
 }
 
 .bg-gradient-primary {
-  background-color: #929ec1;
-  background-image: linear-gradient(180deg, #4e73df 10%, #06112f 100%);
+  background-color: #aebec1;
+  background-image: linear-gradient(180deg, #de6984 10%, #2f0018 100%);
   background-size: cover;
 }
 
@@ -10584,7 +10584,7 @@ a:focus {
 }
 
 .bg-login-image {
-  background: url("https://source.unsplash.com/K4mSJ7kc0As/600x800");
+  background: url("https://www.wallpapermaiden.com/wallpaper/31627/download/600x800/flat-landscape-sunset-trees-minimal-design.jpeg");
   background-position: center;
   background-size: cover;
 }
