--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -9667,8 +9667,8 @@ a:focus {
 }
 
 .bg-gradient-primary {
-  background-color: #929ec1;
-  background-image: linear-gradient(180deg, #4e73df 10%, #06112f 100%);
+  background-color: #034f70;
+  background-image: linear-gradient(180deg, #034f70 10%, #259ed2 100%);
   background-size: cover;
 }
 
@@ -10584,7 +10584,7 @@ a:focus {
 }
 
 .bg-login-image {
-  background: url("https://source.unsplash.com/K4mSJ7kc0As/600x800");
+  background: url("../img/bg_600x800.png");
   background-position: center;
   background-size: cover;
 }
